[package]
name = "dll_injector"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_Threading",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory",
	"Win32_System_Diagnostics_Debug",
	"Win32_Security"
] }
tracing = { version = "0.1.40", features = ["release_max_level_info", "max_level_debug"] }
tracing-subscriber = "0.3.18"