[package]
name = "dll_injector"
description = "A DLL injector written in Rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 AND MIT"
repository = "https://github.com/tanchevk/dll_injector"
readme = "README.md"
publish = false
authors = ["Kamela <kamela_ae@proton.me>"]

[dependencies]
windows = { version = "0.58.0", features = [
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_Threading",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory",
	"Win32_System_Diagnostics_Debug",
	"Win32_Security"
] }
tracing = { version = "0.1.40", features = ["max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["ansi"] }
clap = { version = "4.5.20", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.dev_optimized]
opt-level = 0
lto = "fat"
codegen-units = 1